--- a/andfactory-iOS-kadai/Settings.bundle/com.mono0926.LicensePlist.plist
+++ b/andfactory-iOS-kadai/Settings.bundle/com.mono0926.LicensePlist.plist
@@ -12,9 +12,25 @@
 		</dict>
 		<dict>
 			<key>File</key>
+			<string>com.mono0926.LicensePlist/Alamofire</string>
+			<key>Title</key>
+			<string>Alamofire</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
 			<string>com.mono0926.LicensePlist/LicensePlist</string>
 			<key>Title</key>
 			<string>LicensePlist</string>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+		</dict>
+		<dict>
+			<key>File</key>
+			<string>com.mono0926.LicensePlist/Nuke</string>
+			<key>Title</key>
+			<string>Nuke</string>
 			<key>Type</key>
 			<string>PSChildPaneSpecifier</string>
 		</dict>
